Add: Generation for a fixes number of tasks